...
                  context: context,
                  builder: (context) {
                    return const LoginPage();
                  },
                );
              },
              child: const Text('Sign in'),
            ),
          ),
          Padding(
            padding: const EdgeInsets.all(5.0),
            child: ElevatedButton(
              onPressed: () async {
...
